--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,8 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 /*  ----------------
@@ -19,8 +20,10 @@ main {
 .container {
     align-items: center;
     width: 870px;
-    background: #E5E7F8;
+    background: #ffffff;
     border-radius: 5px;
+    margin-top: 30px;
+    padding: 30px;
 }
 
 .section-title {
@@ -28,11 +31,6 @@ main {
     font-size: 24px;
     margin-top: 0;
 }
-
-.top-players {
-    padding: 30px;
-}
-
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -63,14 +61,17 @@ hr {
 
 /* Top blogs styles */
 
-.top-blogs{
+.top-blogs {
     padding: 30px;
     padding-bottom: 0;
 }
-.blogs{
+
+.blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 10px;
 }
+
 .blogs .blog img {
     width: 177px;
     height: 117px;
@@ -81,14 +82,66 @@ hr {
     margin-bottom: 30px;
     align-items: center;
 }
-p{
+.blog:hover{
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius: 8px;
+}
+p {
     color: #9F9F9F;
 }
-a{
+
+a {
     text-decoration: none;
     color: #562EFF;
     font-size: 16px;
 }
-.blog-info{
+
+.blog-info {
     margin-left: 16px;
+}
+
+/* Latest courses styles */
+
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+.course{
+    padding: 10px;  
+}
+.course:hover{
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius: 8px;
+}
+.courses .course .course-thumbnail img {
+    width: 100%;
+    height: 104px;
+}
+.course-athuor{
+    color: #ED6B4F;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.ratting-num{
+    color: black;
+    font-size: 16px;
+}
+.course-duration{
+    background-color: #FFD1C7;
+    padding: 5px;
+    border-radius: 40px;
+    color: #FF4A60;
 }
