media queries added

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@ main {
     font-size: 24px;
     margin-top: 0;
 }
+
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -82,10 +83,12 @@ hr {
     margin-bottom: 30px;
     align-items: center;
 }
-.blog:hover{
+
+.blog:hover {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     border-radius: 8px;
 }
+
 p {
     color: #9F9F9F;
 }
@@ -102,46 +105,96 @@ a {
 
 /* Latest courses styles */
 
-.courses{
+.courses {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 24px;
 }
-.course{
-    padding: 10px;  
+
+.course {
+    padding: 10px;
 }
-.course:hover{
+
+.course:hover {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     border-radius: 8px;
 }
+
 .courses .course .course-thumbnail img {
-    width: 100%;
+    width: 224px;
     height: 104px;
 }
-.course-athuor{
+
+.course-athuor {
     color: #ED6B4F;
 }
-.course-info{
+
+.course-info {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.fa-star{
+
+.fa-star {
     font-size: 12px;
 }
-.fa-star.filled{
+
+.fa-star.filled {
     color: #FFC014;
 }
-.fa-star.empty{
+
+.fa-star.empty {
     color: #AEAEAE;
 }
-.ratting-num{
+
+.ratting-num {
     color: black;
     font-size: 16px;
 }
-.course-duration{
+
+.course-duration {
     background-color: #FFD1C7;
     padding: 5px;
     border-radius: 40px;
     color: #FF4A60;
+}
+
+/* media queries */
+
+/* Mobile queries */
+
+@media only screen and (max-width: 688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blog {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+/* tablet devices */
+
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .courses{
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 30px;
+    }
 }
