--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,51 @@
 body {
     font-family: 'Lato', sans-serif;
     background-color: #EBFAF9;
+    margin: 0;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/* -------------
+    nav styles 
+    ------------- */
+
+nav{
+    background-color: #562EFF;
+    height: 94px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo img{
+    width: 40px;
+    height: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.site-name{
+    font-size: 32px;
+    color: white;
+}
+.nav-left-side{
+    display: flex;
+    align-items: center;
+}
+.nav-right-side{
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+.nav-option{
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 16px;
 }
 
 /*  ----------------
@@ -93,7 +132,7 @@ p {
     color: #9F9F9F;
 }
 
-a {
+.athuor {
     text-decoration: none;
     color: #562EFF;
     font-size: 16px;
